Fixing a calendar layout problem (http://support.chamilo.org/issues/195)

--- a/layout/aqua/css/common_general.css
+++ b/layout/aqua/css/common_general.css
@@ -347,7 +347,7 @@ img {
 	left: 50%;
 	right: 50%;
 	border-width: 1px;
-	border-style: solid;
+	border-style: dotted;
 	background-repeat: no-repeat;
 	background-position: 10px 10px;
 	padding: 10px;
@@ -368,7 +368,7 @@ img {
 
 .warning-message {
 	background-image: url('../img/common/status_warning.png');
-	background-color: #ffedd1;
+	background-color: #fff8aa;
 	border-color: #ffd89b;
 }
 
