--- a/layout/aqua/css/weblcms.css
+++ b/layout/aqua/css/weblcms.css
@@ -93,13 +93,12 @@ div.feedback div.publication_actions {
 
 div.mini_calendar {
 	float: left;
-	width: 19%;
-	padding-right: 1%;
+	width: 250px;
+	padding-right: 10px;
 }
 
 div.normal_calendar {
-	float: left;
-	width: 80%;
+	margin-left: 260px;
 }
 
 div.level_1 {
